--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ button:hover{
 <body>
 
 <div class="container">
-    <h1 class="slide-in">QuimiCare</h1>
+    <h1 class="slide-in">OK*QuimiCare</h1>
     <h3>Calculadora clínica de pH y equilibrio ácido-base para personal de salud</h3>
     <hr>
 
