--- a/acercade.html
+++ b/acercade.html
@@ -113,7 +113,7 @@
   <div class="app-container">
   <header class="app-header">
     <div class="fila-header">
-    <div class="app-title">QuimiCare</div>
+    <div class="app-title">OK*QuimiCare</div>
 	<button class="btn-volver" onclick="history.back()">
 			<span class="txt">VOLVER</span>
 			<span class="icon">&laquo;&laquo;</span>
@@ -125,8 +125,8 @@
   <div class="risk-item active" data-key="preeclampsia">
         <span class="badge"></span>
         <p>
-        Este software denominado <strong>QuimiCare</strong> un software educativo 
-		(calculadora clínica) que permita a los estudiantes de salud comprender 
+        Este software denominado <strong>OK*QuimiCare</strong> es una aplicación de tipo educativo 
+		(calculadora clínica) diseñada para permitir a los estudiantes de salud comprender 
 		y aplicar los principios químicos del equilibrio ácido-base (pH, pOH, [H₃O⁺], [OH⁻]) 
 		a través de simulaciones clínicas, ejercicios interactivos y casos reales 
 		relacionados con la práctica profesional.
