--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>MaterSoft</title>
+    <title>QuimiCare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
@@ -183,7 +183,7 @@
 
 <div class="app-container">
     <div class="fila-header">
-		<h1 class="app-title">QuimiCare</h1>
+		<h1 class="app-title">OK*QuimiCare</h1>
 
 		<button class="btn-volver" onclick="history.back()">
 			<span class="txt">VOLVER</span>
