--- a/simulador.html
+++ b/simulador.html
@@ -395,7 +395,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>QuimiCare - Simulador de Escenarios Clínico-Químicos</h1>
+            <h1>OK*QuimiCare - Simulador de Escenarios Clínico-Químicos</h1>
             <button class="btn-volver" onclick="history.back()">
 			<span class="txt">VOLVER</span>
 			<span class="icon">&laquo;&laquo;</span>
