--- a/guias.html
+++ b/guias.html
@@ -332,7 +332,7 @@
     </script>
     <div class="container">
         <div class="header">
-            <h1>QuimiCare - Conceptos Clave</h1>
+            <h1>OK*QuimiCare - Conceptos Clave</h1>
             <!--<button class="back-btn" onclick="window.history.back()">« VOLVER</button>-->
             <button class="btn-volver" onclick="history.back()">
 			<span class="txt">VOLVER</span>
